[package]
name = "bakeoff"
version = "0.1.0"
authors = ["Kenneth Hwang <ken@truex.com>"]

[dependencies]
iron = "*"
router = "*"
hyper = "*"
persistent = "*"
rustc-serialize = "*"
redis = "*"
r2d2 = "*"
r2d2_redis = "*"
url = { git = "https://github.com/servo/rust-url" }
mustache = "*"
bit-vec = "*"